--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -37,15 +37,7 @@
    "id": "01ba66b5-0165-4489-b3c7-b179a7f473d8",
    "metadata": {},
    "source": [
-    "## Query W&B or Load Locally Cached Data\n",
-    "\n",
-    "- `load_cached_history`\n",
-    "    - `True` will read local pickle file\n",
-    "    - `False` will query W&B\n",
-    "- `VALIDATORS`: Names of W&B runs to query\n",
-    "- `start_ts`: Earlist time (epoch) from which to pull W&B runs\n",
-    "\n",
-    "*Note:* Variables in all caps contain data used throughout the notebook\n"
+    "## Query W&B or Load Locally Cached Data"
    ]
   },
   {
@@ -55,12 +47,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# `load_cached_history` = True will read local pickle file at fname\n",
+    "# `load_cached_history` = False will query W&B\n",
     "load_cached_history = True  \n",
     "fname = 'vali_histories.pkl'\n",
     "\n",
+    "#  Earlist time (epoch) from which to pull W&B runs\n",
     "start_ts = 1727846400\n",
     "\n",
+    "# Names of W&B runs to query\n",
     "VALIDATORS = ['validator-193-1.1.0', 'validator-19-1.1.0', 'validator-107-1.1.0']\n",
+    "\n",
+    "# Keys will be validator names, values will be history dataframes\n",
     "HISTORY_DFS = {}\n"
    ]
   },
@@ -128,30 +126,24 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "43b3d766-0b7f-4779-b631-76f3911030bf",
-   "metadata": {},
-   "source": [
-    "- `load_cached_scores`\n",
-    "    - `True` will read local pickle file\n",
-    "    - `False` will run simulations for each validator with the specified reward functions in parallel\n",
-    "- `score_num_challenges`: Number of dataframe rows over which to compute rewards and scores\n",
-    "- `SCORED_DFS`: Keys are validator (w&b run) names, values are dataframes with reward & score columns\n",
-    "\n",
-    "*Note:* Variables in all caps contain data used throughout the notebook"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "b81dcff2-c181-47d7-b5d6-590670ef7806",
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_cached_scores = True\n",
+    "# `load_cached_scores` = False will run simulations for each validator with the specified reward functions in parallel\n",
+    "# `load_cached_scores` = True will read local pickle file\n",
+    "load_cached_scores = False  \n",
+    "\n",
+    "# `write_to_cache` = True will overwrite scored_fname\n",
+    "write_to_cache = False\n",
     "scored_fname = 'histories_scored.pkl'\n",
     "\n",
-    "score_num_challenges = 100\n",
+    "# Number of dataframe rows over which to compute rewards and scores, set to `None` for all rows\n",
+    "score_num_challenges = Non\n",
+    "\n",
+    "# Keys are validator (w&b run) names, values are dataframes with reward & score columns\n",
     "SCORED_DFS = {}"
    ]
   },
@@ -160,20 +152,39 @@
    "execution_count": 5,
    "id": "7a5a3a5b-c877-4dd1-8525-338036e0a302",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "functools.partial(<function run_simulation at 0x7f71fc391870>, limit=5)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Computing Rewards and Scores: 100%|██████████| 5/5 [00:03<00:00,  1.37it/s]\n",
+      "Computing Rewards and Scores: 100%|██████████| 5/5 [00:04<00:00,  1.22it/s]\n",
+      "Computing Rewards and Scores: 100%|██████████| 5/5 [00:04<00:00,  1.20it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "if load_cached_scores:\n",
     "    SCORED_DFS = joblib.load(scored_fname)\n",
     "else:  \n",
     "    simulation_fn = partial(run_simulation, limit=score_num_challenges)\n",
-    "    print(simulation_fn)\n",
+    "\n",
+    "    # progress bar is kinda jank with multiprocessing, could fix but nah\n",
     "    with mp.Pool(mp.cpu_count()) as pool:\n",
     "        results = pool.map(\n",
     "            simulation_fn,\n",
     "            [HISTORY_DFS[vali] for vali in VALIDATORS])\n",
     "    \n",
     "    SCORED_DFS = {vali: scored_df for vali, scored_df in zip(VALIDATORS, results)}\n",
-    "    joblib.dump(SCORED_DFS, scored_fname)"
+    "    if write_to_cache:\n",
+    "        joblib.dump(SCORED_DFS, scored_fname)"
    ]
   },
   {
@@ -186,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "82708075-8c94-47b6-8982-e2685ae5c52c",
    "metadata": {},
    "outputs": [],
