compute average challenges per tempo

--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -189,10 +189,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "840836a6-1a1d-48e1-af2b-d853d66be957",
+   "metadata": {},
+   "source": [
+    "## Plot Rewards and Scores \n",
+    "**Note: Variable y-axis ranges**\n",
+    "\n",
+    "Todo: update x axis to be human readable timestamp "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e5e68847-d2ac-41e2-9a97-bfc83a88bd04",
    "metadata": {},
    "source": [
-    "## I. reward100 * .5 + reward10 * .25 + correct * .25"
+    "## reward100 * .5 + reward10 * .25 + correct * .25"
    ]
   },
   {
