adding note about weight frequency

--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -280,7 +280,8 @@
    "id": "6b731385-3231-454e-b082-87602d4de705",
    "metadata": {},
    "source": [
-    "#### Weights"
+    "#### Weights\n",
+    "note that weights aren't actually set this often (this shows per challenge)"
    ]
   },
   {
