wip, moving to IDE because why am i in jupyter rn

--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -202,7 +202,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Computing Rewards, Scores and Weights:  24%|██▎       | 498/2106 [08:28<27:33,  1.03s/it]"
+      "Computing Rewards, Scores and Weights:  77%|███████▋  | 1915/2487 [33:00<09:13,  1.03it/s]"
      ]
     }
    ],
