--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -2,49 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "id": "602f1553-73ce-4c97-9e5d-facb8957d719",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[WARNING]: failed to patch stdout/stderr for fork-safety: 'OutStream' object\n",
-      "has no attribute 'buffer'\n",
-      "[WARNING]: failed to reconfigure stdout/stderr with custom encoding error\n",
-      "handler: 'OutStream' object has no attribute 'reconfigure'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024-10-04 05:50:09.024 |       INFO       |  - You are connecting to finney network with endpoint wss://entrypoint-finney.opentensor.ai:443. - \n",
-      "2024-10-04 05:50:09.026 |     WARNING      |  - We strongly encourage running a local subtensor node whenever possible. This increases decentralization and resilience of the network. - \n",
-      "2024-10-04 05:50:09.026 |     WARNING      |  - In a future release, local subtensor will become the default endpoint. To get ahead of this change, please run a local subtensor node and point to it. - \n",
-      "2024-10-04 05:50:09.048 |       INFO       |  - You are connecting to finney network with endpoint wss://entrypoint-finney.opentensor.ai:443. - \n",
-      "2024-10-04 05:50:09.050 |     WARNING      |  - We strongly encourage running a local subtensor node whenever possible. This increases decentralization and resilience of the network. - \n",
-      "2024-10-04 05:50:09.050 |     WARNING      |  - In a future release, local subtensor will become the default endpoint. To get ahead of this change, please run a local subtensor node and point to it. - \n",
-      "2024-10-04 05:50:09.059 |       INFO       |  - You are connecting to finney network with endpoint wss://entrypoint-finney.opentensor.ai:443. - \n",
-      "2024-10-04 05:50:09.060 |     WARNING      |  - We strongly encourage running a local subtensor node whenever possible. This increases decentralization and resilience of the network. - \n",
-      "2024-10-04 05:50:09.061 |     WARNING      |  - In a future release, local subtensor will become the default endpoint. To get ahead of this change, please run a local subtensor node and point to it. - \n",
-      "2024-10-04 05:50:09.126 |       INFO       |  - Connected to finney network and wss://entrypoint-finney.opentensor.ai:443. - \n",
-      "2024-10-04 05:50:09.133 |       INFO       |  - Connected to finney network and wss://entrypoint-finney.opentensor.ai:443. - \n",
-      "2024-10-04 05:50:09.139 |       INFO       |  - Connected to finney network and wss://entrypoint-finney.opentensor.ai:443. - \n",
-      "2024-10-04 05:50:11.328 |       INFO       |  - You are connecting to finney network with endpoint wss://entrypoint-finney.opentensor.ai:443. - \n",
-      "2024-10-04 05:50:11.328 |     WARNING      |  - We strongly encourage running a local subtensor node whenever possible. This increases decentralization and resilience of the network. - \n",
-      "2024-10-04 05:50:11.328 |     WARNING      |  - In a future release, local subtensor will become the default endpoint. To get ahead of this change, please run a local subtensor node and point to it. - \n",
-      "2024-10-04 05:50:11.381 |       INFO       |  - You are connecting to finney network with endpoint wss://entrypoint-finney.opentensor.ai:443. - \n",
-      "2024-10-04 05:50:11.381 |     WARNING      |  - We strongly encourage running a local subtensor node whenever possible. This increases decentralization and resilience of the network. - \n",
-      "2024-10-04 05:50:11.381 |     WARNING      |  - In a future release, local subtensor will become the default endpoint. To get ahead of this change, please run a local subtensor node and point to it. - \n",
-      "2024-10-04 05:50:11.389 |       INFO       |  - You are connecting to finney network with endpoint wss://entrypoint-finney.opentensor.ai:443. - \n",
-      "2024-10-04 05:50:11.389 |     WARNING      |  - We strongly encourage running a local subtensor node whenever possible. This increases decentralization and resilience of the network. - \n",
-      "2024-10-04 05:50:11.389 |     WARNING      |  - In a future release, local subtensor will become the default endpoint. To get ahead of this change, please run a local subtensor node and point to it. - \n",
-      "2024-10-04 05:50:11.436 |       INFO       |  - Connected to finney network and wss://entrypoint-finney.opentensor.ai:443. - \n",
-      "2024-10-04 05:50:11.490 |       INFO       |  - Connected to finney network and wss://entrypoint-finney.opentensor.ai:443. - \n",
-      "2024-10-04 05:50:11.501 |       INFO       |  - Connected to finney network and wss://entrypoint-finney.opentensor.ai:443. - \n"
-     ]
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #800000; text-decoration-color: #800000\">╭─────────────────────────────── </span><span style=\"color: #800000; text-decoration-color: #800000; font-weight: bold\">Traceback </span><span style=\"color: #bf7f7f; text-decoration-color: #bf7f7f; font-weight: bold\">(most recent call last)</span><span style=\"color: #800000; text-decoration-color: #800000\"> ────────────────────────────────╮</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span> in <span style=\"color: #00ff00; text-decoration-color: #00ff00\">&lt;module&gt;</span>:<span style=\"color: #0000ff; text-decoration-color: #0000ff\">11</span>                                                                                   <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>                                                                                                  <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 8 </span>                                                                                            <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\"> 9 </span><span style=\"color: #0000ff; text-decoration-color: #0000ff\">from</span> <span style=\"color: #00ffff; text-decoration-color: #00ffff; text-decoration: underline\">incentive</span> <span style=\"color: #0000ff; text-decoration-color: #0000ff\">import</span> assemble_W, assemble_S, compute_incentive                             <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">10 </span><span style=\"color: #0000ff; text-decoration-color: #0000ff\">from</span> <span style=\"color: #00ffff; text-decoration-color: #00ffff; text-decoration: underline\">wandb_utils</span> <span style=\"color: #0000ff; text-decoration-color: #0000ff\">import</span> get_wandb_history                                                   <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span> <span style=\"color: #800000; text-decoration-color: #800000\">❱ </span>11 <span style=\"color: #0000ff; text-decoration-color: #0000ff\">from</span> <span style=\"color: #00ffff; text-decoration-color: #00ffff; text-decoration: underline\">plotting</span> <span style=\"color: #0000ff; text-decoration-color: #0000ff\">import</span> plot_metric, plot_multi_validator_metric, plot_incentive, plot_ince    <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">12 </span><span style=\"color: #0000ff; text-decoration-color: #0000ff\">from</span> <span style=\"color: #00ffff; text-decoration-color: #00ffff; text-decoration: underline\">utils</span> <span style=\"color: #0000ff; text-decoration-color: #0000ff\">import</span> average_challenges_per_tempo                                              <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">13 </span><span style=\"color: #0000ff; text-decoration-color: #0000ff\">from</span> <span style=\"color: #00ffff; text-decoration-color: #00ffff; text-decoration: underline\">simulator</span> <span style=\"color: #0000ff; text-decoration-color: #0000ff\">import</span> Simulator                                                             <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">14 </span>                                                                                            <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
+       "<span style=\"color: #800000; text-decoration-color: #800000\">╰──────────────────────────────────────────────────────────────────────────────────────────────────╯</span>\n",
+       "<span style=\"color: #ff0000; text-decoration-color: #ff0000; font-weight: bold\">ImportError: </span>cannot import name <span style=\"color: #008000; text-decoration-color: #008000\">'plot_incentive'</span> from <span style=\"color: #008000; text-decoration-color: #008000\">'plotting'</span> <span style=\"font-weight: bold\">(</span><span style=\"color: #800080; text-decoration-color: #800080\">/home/user/scoring_simulator/</span><span style=\"color: #ff00ff; text-decoration-color: #ff00ff\">plotting.py</span><span style=\"font-weight: bold\">)</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[31m╭─\u001b[0m\u001b[31m──────────────────────────────\u001b[0m\u001b[31m \u001b[0m\u001b[1;31mTraceback \u001b[0m\u001b[1;2;31m(most recent call last)\u001b[0m\u001b[31m \u001b[0m\u001b[31m───────────────────────────────\u001b[0m\u001b[31m─╮\u001b[0m\n",
+       "\u001b[31m│\u001b[0m in \u001b[92m<module>\u001b[0m:\u001b[94m11\u001b[0m                                                                                   \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m                                                                                                  \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m 8 \u001b[0m                                                                                            \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m 9 \u001b[0m\u001b[94mfrom\u001b[0m \u001b[4;96mincentive\u001b[0m \u001b[94mimport\u001b[0m assemble_W, assemble_S, compute_incentive                             \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m10 \u001b[0m\u001b[94mfrom\u001b[0m \u001b[4;96mwandb_utils\u001b[0m \u001b[94mimport\u001b[0m get_wandb_history                                                   \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m \u001b[31m❱ \u001b[0m11 \u001b[94mfrom\u001b[0m \u001b[4;96mplotting\u001b[0m \u001b[94mimport\u001b[0m plot_metric, plot_multi_validator_metric, plot_incentive, plot_ince    \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m12 \u001b[0m\u001b[94mfrom\u001b[0m \u001b[4;96mutils\u001b[0m \u001b[94mimport\u001b[0m average_challenges_per_tempo                                              \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m13 \u001b[0m\u001b[94mfrom\u001b[0m \u001b[4;96msimulator\u001b[0m \u001b[94mimport\u001b[0m Simulator                                                             \u001b[31m│\u001b[0m\n",
+       "\u001b[31m│\u001b[0m   \u001b[2m14 \u001b[0m                                                                                            \u001b[31m│\u001b[0m\n",
+       "\u001b[31m╰──────────────────────────────────────────────────────────────────────────────────────────────────╯\u001b[0m\n",
+       "\u001b[1;91mImportError: \u001b[0mcannot import name \u001b[32m'plot_incentive'\u001b[0m from \u001b[32m'plotting'\u001b[0m \u001b[1m(\u001b[0m\u001b[35m/home/user/scoring_simulator/\u001b[0m\u001b[95mplotting.py\u001b[0m\u001b[1m)\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -60,7 +55,7 @@
     "from wandb_utils import get_wandb_history\n",
     "from plotting import plot_metric, plot_multi_validator_metric, plot_incentive, plot_incentives\n",
     "from utils import average_challenges_per_tempo\n",
-    "from simulator import run_simulation"
+    "from simulator import Simulator"
    ]
   },
   {
@@ -194,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "7a5a3a5b-c877-4dd1-8525-338036e0a302",
    "metadata": {},
    "outputs": [
@@ -202,7 +197,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Computing Rewards, Scores and Weights:  77%|███████▋  | 1915/2487 [33:00<09:13,  1.03it/s]"
+      "Computing Rewards, Scores and Weights: 100%|██████████| 2106/2106 [36:55<00:00,  1.05s/it]\n",
+      "Computing Rewards, Scores and Weights: 100%|██████████| 2487/2487 [42:31<00:00,  1.03s/it]\n",
+      "Computing Rewards, Scores and Weights: 100%|██████████| 2288/2288 [42:49<00:00,  1.12s/it]\n"
      ]
     }
    ],
@@ -225,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "407108a1-2d83-442a-86a8-e61e6fd5822c",
    "metadata": {},
    "outputs": [],
@@ -259,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "402a9306-a974-47a0-af93-62e548d204a2",
    "metadata": {},
    "outputs": [],
@@ -278,20 +275,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "0eb54caf-a040-44ce-9c0e-c92c4801ac1e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([29180., 24535., 22799., 42106., 12226., 23519.,     0., 29828.,\n",
+       "       41419., 26210.])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "W_new[0][:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "8cd1db45-7b2b-405a-a44d-02fde57e5b6f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([31759., 22555., 17285., 32080., 12856., 25423.,     0., 28345.,\n",
+       "       42438., 24506.])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "W_old[0][:10]"
    ]
