--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -2,12 +2,77 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "602f1553-73ce-4c97-9e5d-facb8957d719",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WARNING]: failed to patch stdout/stderr for fork-safety: 'OutStream' object\n",
+      "has no attribute 'buffer'\n",
+      "[WARNING]: failed to reconfigure stdout/stderr with custom encoding error\n",
+      "handler: 'OutStream' object has no attribute 'reconfigure'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-10-06 08:13:25.500 |       INFO       |  - You are connecting to finney network with endpoint wss://entrypoint-finney.opentensor.ai:443. - \n",
+      "2024-10-06 08:13:25.501 |     WARNING      |  - We strongly encourage running a local subtensor node whenever possible. This increases decentralization and resilience of the network. - \n",
+      "2024-10-06 08:13:25.502 |     WARNING      |  - In a future release, local subtensor will become the default endpoint. To get ahead of this change, please run a local subtensor node and point to it. - \n",
+      "2024-10-06 08:13:25.611 |       INFO       |  - Connected to finney network and wss://entrypoint-finney.opentensor.ai:443. - \n",
+      "2024-10-06 08:13:25.616 |       INFO       |  - You are connecting to finney network with endpoint wss://entrypoint-finney.opentensor.ai:443. - \n",
+      "2024-10-06 08:13:25.618 |     WARNING      |  - We strongly encourage running a local subtensor node whenever possible. This increases decentralization and resilience of the network. - \n",
+      "2024-10-06 08:13:25.618 |     WARNING      |  - In a future release, local subtensor will become the default endpoint. To get ahead of this change, please run a local subtensor node and point to it. - \n",
+      "2024-10-06 08:13:25.717 |       INFO       |  - Connected to finney network and wss://entrypoint-finney.opentensor.ai:443. - \n",
+      "2024-10-06 08:13:25.732 |       INFO       |  - You are connecting to finney network with endpoint wss://entrypoint-finney.opentensor.ai:443. - \n",
+      "2024-10-06 08:13:25.734 |     WARNING      |  - We strongly encourage running a local subtensor node whenever possible. This increases decentralization and resilience of the network. - \n",
+      "2024-10-06 08:13:25.734 |     WARNING      |  - In a future release, local subtensor will become the default endpoint. To get ahead of this change, please run a local subtensor node and point to it. - \n",
+      "2024-10-06 08:13:25.835 |       INFO       |  - Connected to finney network and wss://entrypoint-finney.opentensor.ai:443. - \n",
+      "2024-10-06 08:13:25.887 |       INFO       |  - You are connecting to finney network with endpoint wss://entrypoint-finney.opentensor.ai:443. - \n",
+      "2024-10-06 08:13:25.888 |     WARNING      |  - We strongly encourage running a local subtensor node whenever possible. This increases decentralization and resilience of the network. - \n",
+      "2024-10-06 08:13:25.889 |     WARNING      |  - In a future release, local subtensor will become the default endpoint. To get ahead of this change, please run a local subtensor node and point to it. - \n",
+      "2024-10-06 08:13:25.979 |       INFO       |  - Connected to finney network and wss://entrypoint-finney.opentensor.ai:443. - \n",
+      "2024-10-06 08:13:26.045 |       INFO       |  - You are connecting to finney network with endpoint wss://entrypoint-finney.opentensor.ai:443. - \n",
+      "2024-10-06 08:13:26.046 |     WARNING      |  - We strongly encourage running a local subtensor node whenever possible. This increases decentralization and resilience of the network. - \n",
+      "2024-10-06 08:13:26.047 |     WARNING      |  - In a future release, local subtensor will become the default endpoint. To get ahead of this change, please run a local subtensor node and point to it. - \n",
+      "2024-10-06 08:13:26.129 |       INFO       |  - Connected to finney network and wss://entrypoint-finney.opentensor.ai:443. - \n",
+      "2024-10-06 08:13:26.177 |       INFO       |  - You are connecting to finney network with endpoint wss://entrypoint-finney.opentensor.ai:443. - \n",
+      "2024-10-06 08:13:26.178 |     WARNING      |  - We strongly encourage running a local subtensor node whenever possible. This increases decentralization and resilience of the network. - \n",
+      "2024-10-06 08:13:26.178 |     WARNING      |  - In a future release, local subtensor will become the default endpoint. To get ahead of this change, please run a local subtensor node and point to it. - \n",
+      "2024-10-06 08:13:26.267 |       INFO       |  - Connected to finney network and wss://entrypoint-finney.opentensor.ai:443. - \n",
+      "2024-10-06 08:13:27.624 |       INFO       |  - You are connecting to finney network with endpoint wss://entrypoint-finney.opentensor.ai:443. - \n",
+      "2024-10-06 08:13:27.625 |     WARNING      |  - We strongly encourage running a local subtensor node whenever possible. This increases decentralization and resilience of the network. - \n",
+      "2024-10-06 08:13:27.625 |     WARNING      |  - In a future release, local subtensor will become the default endpoint. To get ahead of this change, please run a local subtensor node and point to it. - \n",
+      "2024-10-06 08:13:27.727 |       INFO       |  - Connected to finney network and wss://entrypoint-finney.opentensor.ai:443. - \n",
+      "2024-10-06 08:13:28.196 |       INFO       |  - You are connecting to finney network with endpoint wss://entrypoint-finney.opentensor.ai:443. - \n",
+      "2024-10-06 08:13:28.196 |     WARNING      |  - We strongly encourage running a local subtensor node whenever possible. This increases decentralization and resilience of the network. - \n",
+      "2024-10-06 08:13:28.196 |     WARNING      |  - In a future release, local subtensor will become the default endpoint. To get ahead of this change, please run a local subtensor node and point to it. - \n",
+      "2024-10-06 08:13:28.310 |       INFO       |  - Connected to finney network and wss://entrypoint-finney.opentensor.ai:443. - \n",
+      "2024-10-06 08:13:28.344 |       INFO       |  - You are connecting to finney network with endpoint wss://entrypoint-finney.opentensor.ai:443. - \n",
+      "2024-10-06 08:13:28.345 |     WARNING      |  - We strongly encourage running a local subtensor node whenever possible. This increases decentralization and resilience of the network. - \n",
+      "2024-10-06 08:13:28.345 |     WARNING      |  - In a future release, local subtensor will become the default endpoint. To get ahead of this change, please run a local subtensor node and point to it. - \n",
+      "2024-10-06 08:13:28.355 |       INFO       |  - You are connecting to finney network with endpoint wss://entrypoint-finney.opentensor.ai:443. - \n",
+      "2024-10-06 08:13:28.355 |     WARNING      |  - We strongly encourage running a local subtensor node whenever possible. This increases decentralization and resilience of the network. - \n",
+      "2024-10-06 08:13:28.355 |     WARNING      |  - In a future release, local subtensor will become the default endpoint. To get ahead of this change, please run a local subtensor node and point to it. - \n",
+      "2024-10-06 08:13:28.375 |       INFO       |  - You are connecting to finney network with endpoint wss://entrypoint-finney.opentensor.ai:443. - \n",
+      "2024-10-06 08:13:28.375 |     WARNING      |  - We strongly encourage running a local subtensor node whenever possible. This increases decentralization and resilience of the network. - \n",
+      "2024-10-06 08:13:28.375 |     WARNING      |  - In a future release, local subtensor will become the default endpoint. To get ahead of this change, please run a local subtensor node and point to it. - \n",
+      "2024-10-06 08:13:28.457 |       INFO       |  - Connected to finney network and wss://entrypoint-finney.opentensor.ai:443. - \n",
+      "2024-10-06 08:13:28.462 |       INFO       |  - Connected to finney network and wss://entrypoint-finney.opentensor.ai:443. - \n",
+      "2024-10-06 08:13:28.483 |       INFO       |  - Connected to finney network and wss://entrypoint-finney.opentensor.ai:443. - \n",
+      "2024-10-06 08:13:28.673 |       INFO       |  - You are connecting to finney network with endpoint wss://entrypoint-finney.opentensor.ai:443. - \n",
+      "2024-10-06 08:13:28.673 |     WARNING      |  - We strongly encourage running a local subtensor node whenever possible. This increases decentralization and resilience of the network. - \n",
+      "2024-10-06 08:13:28.673 |     WARNING      |  - In a future release, local subtensor will become the default endpoint. To get ahead of this change, please run a local subtensor node and point to it. - \n",
+      "2024-10-06 08:13:28.794 |       INFO       |  - Connected to finney network and wss://entrypoint-finney.opentensor.ai:443. - \n"
+     ]
+    }
+   ],
    "source": [
     "from tqdm.notebook import tqdm\n",
     "from datetime import datetime\n",
@@ -38,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "00cb9f0c-5f72-420b-b7e8-a5d3f4e00968",
    "metadata": {},
    "outputs": [],
@@ -63,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "eaa7dbba-b00f-440f-8bef-05bf89f33b7b",
    "metadata": {
     "scrolled": true
@@ -88,10 +153,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9ad13e09-15a6-4300-9606-ddd91baaf5a8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "validator-17-1.1.0\n",
+      "\tDate Range: n/a : n/a\n",
+      "\tDataFrame shape: (0, 4)\n",
+      "\tAverage Challenges Per Tempo: 0\n",
+      "\t\tChallenges Per Tempo: 0\n",
+      "validator-20-1.1.0\n",
+      "\tDate Range: 2024-10-03T07:41:21 : 2024-10-06T00:36:22\n",
+      "\tDataFrame shape: (168, 4)\n",
+      "\tAverage Challenges Per Tempo: 3.0545454545454547\n",
+      "\t\tChallenges Per Tempo: [4, 1, 2, 3, 3, 3, 2, 2, 5, 3, 2, 3, 2, 2, 7, 4, 5, 2, 1, 5, 3, 4, 6, 3, 3, 2, 4, 5, 3, 4, 2, 5, 4, 5, 3, 2, 4, 1, 2, 2, 0, 6, 5, 4, 3, 1, 4, 1, 4, 1, 2, 3, 3, 2, 1]\n",
+      "validator-250-1.1.0\n",
+      "\tDate Range: 2024-10-03T07:41:33 : 2024-10-06T00:46:19\n",
+      "\tDataFrame shape: (293, 4)\n",
+      "\tAverage Challenges Per Tempo: 5.327272727272727\n",
+      "\t\tChallenges Per Tempo: [7, 7, 8, 2, 9, 6, 6, 6, 10, 7, 5, 4, 2, 9, 8, 2, 5, 7, 9, 4, 3, 6, 4, 5, 9, 3, 8, 4, 3, 6, 5, 2, 4, 9, 2, 10, 10, 3, 9, 5, 8, 3, 5, 1, 3, 5, 2, 3, 4, 4, 4, 5, 2, 9, 2]\n",
+      "validator-6-1.1.0\n",
+      "\tDate Range: 2024-10-03T07:37:19 : 2024-10-06T00:28:51\n",
+      "\tDataFrame shape: (332, 5)\n",
+      "\tAverage Challenges Per Tempo: 6.036363636363636\n",
+      "\t\tChallenges Per Tempo: [6, 4, 9, 9, 7, 7, 5, 2, 7, 7, 5, 9, 10, 5, 7, 4, 6, 3, 5, 4, 6, 5, 6, 4, 3, 14, 7, 8, 7, 8, 7, 7, 6, 5, 5, 6, 1, 5, 9, 4, 5, 7, 7, 8, 8, 3, 8, 7, 4, 9, 4, 4, 3, 10, 1]\n",
+      "validator-39-1.1.0\n",
+      "\tDate Range: 2024-10-03T07:37:58 : 2024-10-06T00:55:34\n",
+      "\tDataFrame shape: (2547, 5)\n",
+      "\tAverage Challenges Per Tempo: 46.30909090909091\n",
+      "\t\tChallenges Per Tempo: [47, 47, 47, 46, 48, 48, 48, 48, 48, 45, 46, 48, 46, 47, 48, 46, 47, 48, 44, 47, 49, 45, 45, 47, 49, 46, 46, 48, 47, 46, 47, 47, 47, 48, 45, 45, 49, 47, 47, 48, 47, 45, 48, 48, 46, 49, 46, 45, 46, 48, 45, 46, 47, 44, 20]\n",
+      "validator-19-1.1.0\n",
+      "\tDate Range: 2024-10-03T07:37:20 : 2024-10-06T05:40:00\n",
+      "\tDataFrame shape: (2670, 5)\n",
+      "\tAverage Challenges Per Tempo: 45.25423728813559\n",
+      "\t\tChallenges Per Tempo: [40, 13, 23, 39, 36, 6, 15, 52, 53, 46, 39, 51, 41, 54, 57, 46, 29, 40, 35, 37, 39, 43, 38, 41, 37, 40, 42, 41, 30, 14, 56, 53, 54, 56, 52, 55, 56, 55, 55, 57, 53, 56, 56, 55, 56, 51, 55, 53, 52, 55, 55, 58, 54, 55, 56, 54, 56, 55, 19]\n",
+      "validator-107-1.1.0\n",
+      "\tDate Range: 2024-10-03T12:46:22 : 2024-10-06T05:40:27\n",
+      "\tDataFrame shape: (2884, 5)\n",
+      "\tAverage Challenges Per Tempo: 52.43636363636364\n",
+      "\t\tChallenges Per Tempo: [53, 53, 55, 55, 54, 52, 55, 54, 55, 51, 52, 53, 52, 54, 55, 55, 54, 54, 50, 54, 51, 52, 53, 53, 54, 51, 51, 54, 53, 53, 54, 53, 54, 53, 53, 54, 55, 52, 56, 55, 54, 52, 55, 52, 52, 53, 53, 54, 53, 54, 51, 53, 53, 56, 5]\n",
+      "validator-193-1.1.0\n",
+      "\tDate Range: 2024-10-03T08:41:11 : 2024-10-06T02:48:25\n",
+      "\tDataFrame shape: (3263, 5)\n",
+      "\tAverage Challenges Per Tempo: 58.267857142857146\n",
+      "\t\tChallenges Per Tempo: [58, 59, 60, 59, 61, 59, 60, 60, 59, 61, 59, 58, 59, 60, 59, 60, 60, 61, 61, 59, 58, 59, 58, 58, 59, 56, 58, 58, 58, 59, 59, 60, 59, 61, 59, 59, 59, 59, 59, 59, 60, 59, 60, 58, 57, 61, 59, 60, 58, 61, 58, 59, 60, 59, 61, 7]\n",
+      "validator-131-1.1.0\n",
+      "\tDate Range: 2024-10-03T09:32:49 : 2024-10-06T03:37:50\n",
+      "\tDataFrame shape: (3220, 5)\n",
+      "\tAverage Challenges Per Tempo: 57.5\n",
+      "\t\tChallenges Per Tempo: [59, 60, 56, 60, 58, 58, 56, 59, 61, 59, 58, 60, 59, 58, 57, 57, 58, 58, 59, 59, 55, 60, 59, 59, 58, 57, 58, 57, 58, 58, 57, 60, 57, 59, 60, 59, 58, 59, 60, 59, 58, 57, 60, 59, 58, 59, 56, 60, 59, 60, 57, 59, 60, 58, 59, 5]\n",
+      "validator-122-1.1.0\n",
+      "\tDate Range: 2024-10-03T10:47:07 : 2024-10-06T04:51:07\n",
+      "\tDataFrame shape: (3269, 5)\n",
+      "\tAverage Challenges Per Tempo: 58.375\n",
+      "\t\tChallenges Per Tempo: [61, 61, 60, 59, 57, 60, 59, 59, 59, 60, 59, 60, 60, 60, 58, 59, 60, 58, 60, 61, 59, 57, 59, 59, 59, 58, 59, 60, 58, 57, 59, 60, 60, 59, 58, 60, 60, 60, 59, 61, 58, 61, 59, 61, 60, 59, 60, 59, 59, 60, 58, 59, 60, 60, 61, 4]\n",
+      "validator-236-1.1.0\n",
+      "\tDate Range: n/a : n/a\n",
+      "\tDataFrame shape: (0, 0)\n",
+      "\tAverage Challenges Per Tempo: 0\n",
+      "\t\tChallenges Per Tempo: 0\n",
+      "Dropping ['validator-17-1.1.0', 'validator-20-1.1.0', 'validator-250-1.1.0', 'validator-6-1.1.0', 'validator-236-1.1.0']\n",
+      "Loaded data from validators:\n",
+      "\tvalidator-39-1.1.0\n",
+      "\tvalidator-19-1.1.0\n",
+      "\tvalidator-107-1.1.0\n",
+      "\tvalidator-193-1.1.0\n",
+      "\tvalidator-131-1.1.0\n",
+      "\tvalidator-122-1.1.0\n"
+     ]
+    }
+   ],
    "source": [
     "format_time = lambda v: datetime.fromtimestamp(v).strftime('%Y-%m-%dT%H:%M:%S')\n",
     "min_avg_challenges = 40\n",
@@ -125,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9ddddd64-a01e-4389-bc55-6952205d381b",
    "metadata": {},
    "outputs": [],
@@ -147,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b81dcff2-c181-47d7-b5d6-590670ef7806",
    "metadata": {},
    "outputs": [],
@@ -174,7 +309,105 @@
    "execution_count": null,
    "id": "7a5a3a5b-c877-4dd1-8525-338036e0a302",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parallelizing 6 simulations over 8 cpus\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "017f9e8f4f4e4bc8be11a6bc2e84b50b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "BalancedF1Reward | validator-39-1.1.0:   0%|          | 0/2547 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ace9f71bccd74dd1ae1a9c7d09434ada",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "BalancedF1Reward | validator-19-1.1.0:   0%|          | 0/2670 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6b3b24b656f84068ad06fbff91ebe9e7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "BalancedF1Reward | validator-131-1.1.0:   0%|          | 0/3220 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "258d5bad182e413cbb39e00046593bc5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "BalancedF1Reward | validator-107-1.1.0:   0%|          | 0/2884 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d34c477e27ec46d0bb9104d59503ba25",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "BalancedF1Reward | validator-193-1.1.0:   0%|          | 0/3263 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3ff26c2fdc414c2e88f2c6024108973f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "BalancedF1Reward | validator-122-1.1.0:   0%|          | 0/3269 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "if load_cached_scores:\n",
     "    SCORED_DFS = joblib.load(scored_fname)\n",
