allowing configs to be set in a dict

--- a/simulate_vali.ipynb
+++ b/simulate_vali.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "9f0a6101-291c-4af7-a757-b8f862b4edc9",
+   "execution_count": 22,
+   "id": "7316f188-6949-413c-8b4e-f0cd0702d0dc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import bittensor as bt\n",
     "from datetime import datetime\n",
+    "import bittensor as bt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import argparse\n",
     "\n",
     "from bitmind.utils.uids import get_random_uids\n",
     "from bitmind.utils.data import sample_dataset_index_name\n",
@@ -20,9 +21,40 @@
     "from bitmind.base.validator import BaseValidatorNeuron\n",
     "from bitmind.synthetic_image_generation.synthetic_image_generator import SyntheticImageGenerator\n",
     "from bitmind.image_dataset import ImageDataset\n",
-    "from bitmind.constants import VALIDATOR_DATASET_META\n",
-    "\n",
-    "\n",
+    "from bitmind.constants import VALIDATOR_DATASET_META\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "5111896c-7a1a-4e46-83a9-ad28f86f7ed9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_mock_parser(arg_dict):\n",
+    "    \"\"\" bypassing Bittensor.config's need for an argument parser \"\"\"\n",
+    "    parser = argparse.ArgumentParser()\n",
+    "    for group_name, group_args in arg_dict.items():\n",
+    "        group = parser.add_argument_group(group_name)\n",
+    "        if isinstance(group_args, dict):\n",
+    "            for arg_name, arg_value in group_args.items():\n",
+    "                full_arg_name = f'--{group_name}.{arg_name}'\n",
+    "                group.add_argument(full_arg_name, type=type(arg_value), default=arg_value, \n",
+    "                                   help=f\"Default: {arg_value}\")\n",
+    "        else:\n",
+    "            full_arg_name = f'--{group_name}'\n",
+    "            group.add_argument(full_arg_name, type=type(group_args), default=group_args, \n",
+    "                               help=f\"Default: {group_args}\")\n",
+    "    return parser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "8fb9e989-601e-4fb2-b9cc-9e46d0038007",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class CustomValidator(BaseValidatorNeuron):\n",
     "\n",
     "    def __init__(self, config=None):\n",
@@ -30,7 +62,7 @@
     "\n",
     "        bt.logging.info(\"load_state()\")\n",
     "        self.load_state()\n",
-    "\n",
+    "        print(self.config)\n",
     "        bt.logging.info(\"Loading real datasets\")\n",
     "        self.real_image_datasets = [\n",
     "            ImageDataset(ds['path'], 'train', ds.get('name', None))\n",
@@ -115,15 +147,108 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "id": "9d0c205d-dd5a-4651-91bb-f6ac7a8efbf9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "wallet:\n",
+       "  name: default\n",
+       "  hotkey: default\n",
+       "  path: ~/.bittensor/wallets/\n",
+       "axon:\n",
+       "  port: 8091\n",
+       "  ip: '[::]'\n",
+       "  external_port: null\n",
+       "  external_ip: null\n",
+       "  max_workers: 10\n",
+       "netuid: 34\n",
+       "neuron:\n",
+       "  device: cuda\n",
+       "  epoch_length: 100\n",
+       "  events_retention_size: 2147483648\n",
+       "  dont_save_events: false\n",
+       "  prompt_type: annotation\n",
+       "  name: validator\n",
+       "  timeout: 10\n",
+       "  num_concurrent_forwards: 1\n",
+       "  sample_size: 50\n",
+       "  disable_set_weights: false\n",
+       "  moving_average_alpha: 0.1\n",
+       "  axon_off: false\n",
+       "  vpermit_tao_limit: 4096\n",
+       "  full_path: /home/user/.bittensor/miners/default/default/netuid1/validator\n",
+       "config: null\n",
+       "strict: false\n",
+       "no_version_checking: false\n",
+       "no_prompt: false"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config_dict = {\n",
+    "    'wallet': {\n",
+    "        'name': 'default',\n",
+    "        'hotkey': 'default',\n",
+    "        'path': '~/.bittensor/wallets/'\n",
+    "    },\n",
+    "    'axon': {\n",
+    "        'port': 8091,\n",
+    "        'ip': '[::]',\n",
+    "        'external_port': None,\n",
+    "        'external_ip': None,\n",
+    "        'max_workers': 10\n",
+    "    },\n",
+    "    'netuid': 34,\n",
+    "    'neuron': {\n",
+    "        'device': 'cuda',\n",
+    "        'epoch_length': 100,\n",
+    "        'events_retention_size': 2147483648,\n",
+    "        'dont_save_events': False,\n",
+    "        'prompt_type': 'annotation',\n",
+    "        'name': 'validator',\n",
+    "        'timeout': 10,\n",
+    "        'num_concurrent_forwards': 1,\n",
+    "        'sample_size': 50,\n",
+    "        'disable_set_weights': False,\n",
+    "        'moving_average_alpha': 0.1,\n",
+    "        'axon_off': False,\n",
+    "        'vpermit_tao_limit': 4096,\n",
+    "        'full_path': '/home/user/.bittensor/miners/default/default/netuid1/validator'\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "# bypassing Bittensor.config's need for an argument parser\n",
+    "config = bt.config(create_mock_parser(config_dict))\n",
+    "config"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "4fbc3c2e-1bd0-436f-a37c-17aaa0ea1dd1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "vali = CustomValidator()\n",
+    "vali = CustomValidator(config)\n",
     "\n",
     "uids, responses, label, rewards, scores = vali.forward()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ba9050e-c796-4dee-9a33-3507686f2185",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
